Fixed formatting for Requirements page Committer: Lucas O'Rourke <lor215> On branch master Your branch is up to date with 'origin/master'. Changes to be committed: 	modified:   html_src/requirements.ptml 	modified:   requirements.html

--- a/requirements.html
+++ b/requirements.html
@@ -71,7 +71,7 @@
         </li>
     </ul>
 </nav>
-            <div>
+            <div style="margin-left: 30px; margin-top: 20px">
 
                 <h1>Project Requirements </h1>
 
@@ -79,16 +79,13 @@
                  <br>
                     At one of the most renowned universities in the world, NYU’s computer science department schedules all of their courses manually. Each semester, an individual must spends several days planning courses, professors, classrooms,  and times.
                 </p>
-            </div>
+  
 
-            <div>
                  <p><b>A Solution</b>
                  <br>
                      A high level back-end service that has advanced algorithms to place priority on certain courses, integrated with a user friendly front-end service that allows the user to manually input certain values.
                 </p>
-            </div>
 
-            <div>
                 <p><b>Requirements</b>
                 <br>
                     The requirements are broken up into two sections: hard constraints and soft constraints. Hard constraints are rules that cannot be broken when scheduling courses. Soft constraints are rules that we would like to adhere to, but it is okay to break in order to maintain the integrity of the hard constraints.
@@ -113,9 +110,8 @@
     
                  </p>
                 </p>
-            </div>
 
-            <div>
+
                 <p><b>User Input</b>
                 <br>
                      The user will be required to provide an input for the back-end to work with. Some of the inputs required from the user are:
